--- a/tallyBook/package.json
+++ b/tallyBook/package.json
@@ -12,7 +12,11 @@
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "lowdb": "^1.0.0",
+    "mongoose": "^8.5.1",
     "morgan": "~1.9.1",
     "nanoid": "^2.1.10"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.4"
   }
 }
